<resources>
    <string name="app_name">PATA SMS Gateway</string>
    <string name="title">Downloading Data and Sending</string>

    <string name="sentSMS">Sent SMS</string>
    <string name="pendingSMS">Pending SMS</string>
    <string name="incomingSMS">Incoming SMS</string>

    <string name="action_search">Search</string>
    <string name="about">About..</string>
    <string name="resetPass">Reset Password</string>
    <string name="phnNum">Phone Num</string>
</resources>
