<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2">

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:weightSum="1"
                android:layout_weight="0.5">

                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/sentSMS"
                        android:textColor="#bd000000"
                        android:textStyle="bold"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:layout_marginTop="8dp"
                        android:text="@string/sentSMS"
                        android:textSize="18sp"
                        android:gravity="center|bottom"
                        android:paddingBottom="30dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:background="@color/colorAccent"/>

                    <TextView
                        android:id="@+id/countSent"
                        android:text="0"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>


                </RelativeLayout>
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/pendingSMS"
                        android:textColor="#bd000000"
                        android:textStyle="bold"
                        android:text="@string/pendingSMS"
                        android:textSize="18sp"
                        android:layout_marginRight="8dp"
                        android:layout_marginTop="8dp"
                        android:gravity="center|bottom"
                        android:paddingBottom="30dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:background="@color/colorAccent" />
                    <TextView
                        android:id="@+id/countPending"
                        android:text="0"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>
            </TableRow>

            <TableRow
                android:layout_width="fill_parent"
                android:layout_height="0dp"
                android:weightSum="1"
                android:layout_weight="0.5">
                <RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/incomingSMS"
                        android:textColor="#bd000000"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_marginLeft="8dp"
                        android:text="@string/incomingSMS"
                        android:textSize="18sp"
                        android:gravity="center|bottom"
                        android:paddingBottom="30dp"
                        android:paddingRight="10dp"
                        android:paddingLeft="10dp"
                        android:background="@color/colorAccent"/>

                   <!-- <TextView
                        android:id="@+id/count"
                        android:text="0"
                        android:textSize="24sp"
                        android:textColor="#000"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>-->


                </RelativeLayout>
                <!--<RelativeLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.5">
                    &lt;!&ndash;<Button
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/searchStudentBTN"
                        android:textColor="#bd000000"
                        android:textStyle="bold"
                        android:layout_marginTop="8dp"
                        android:layout_marginRight="8dp"
                        android:text="Search"
                        android:textSize="18sp"
                        android:onClick="searchStudentBTN"
                        android:gravity="center|bottom"
                        android:paddingBottom="30dp"
                        android:paddingRight="9dp"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"/>&ndash;&gt;


                </RelativeLayout>-->
            </TableRow>

        </TableLayout>
        <View
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:layout_weight="1"/>



</LinearLayout>